# TocaFita

./: .gitignore  Biblioteca_TocaFita.py  LICENSE  README.md  Test.py  Teste.py  TrabalhoFinalPOO.py  playlist.txt  setup.cfg  test.py
src/: Biblioteca_TocaFita.py
src/Toca/: TocaFita.py
src/TocaFita.egg-info/: PKG-INFO  SOURCES.txt
