[metadata]
name = TocaFita
author = Bryan Martins/Valderlandia Macedo
description = Pacote que faz a reprodução de uma lista de musicas
long_description = file: README.md
#url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = TocaFita
packages = find:
python_requires = >=3.8

[options.packages.find]
where = TocaFita
